Added smoothened workload metric